# University

./: README.md
Sem-4/witch_math/Approximation/: approximation.py
Sem-4/witch_math/Dif/: Eyler.py  RK2pr.py  RK2vr.py  RK4.py
Sem-4/witch_math/Gauss/: forward_n_backwardGauss.py  input.txt  input2.txt
Sem-4/witch_math/Gold/: gold.py
Sem-4/witch_math/Kurs/: Kurs.py  Kurs5.py  k.py
Sem-4/witch_math/MPI/: MPI.py
Sem-4/witch_math/newton/: Gauss.py  newton.py
Sem-5/ACS/: README.md
Sem-5/OS-sibsutis/: README.md
Sem-5/OS-sibsutis/kursovaya/client/: CMakeLists.txt  TaskManagerClient.hpp  client.cpp  logger.hpp
Sem-5/OS-sibsutis/kursovaya/client/ClientComponents/: AppRunner.hpp  DataHandler.hpp  ElfDataHandler.hpp  NetworkSender.hpp  ProcessDataHandler.hpp  ResponseValidator.hpp
Sem-5/OS-sibsutis/kursovaya/client/Commands/: CommandBuilder.hpp
Sem-5/OS-sibsutis/kursovaya/client/Structures/: ElfInfo.hpp  ProcessInfo.hpp
Sem-5/OS-sibsutis/kursovaya/client/UI/: ElfViewerScreen.hpp  HomeScreen.hpp  TaskManagerScreen.hpp
Sem-5/OS-sibsutis/kursovaya/server/: CMakeLists.txt  server.cpp
Sem-5/OS-sibsutis/kursovaya/server/Commands/: DefaultCommandRegisterer.hpp  ICommand.hpp  ICommandRegistrer.hpp  KillProcessCommand.hpp  ListProcessesCommand.hpp  ReadElfCommand.hpp
Sem-5/OS-sibsutis/kursovaya/server/Managers/: CommandManager.hpp  ElfReader.hpp  ProcessManager.hpp  TaskManager.hpp
Sem-5/OS-sibsutis/kursovaya/server/ServerComponents/: Server.hpp  Session.hpp
Sem-6/GraphicsProcessorProgramming/: flake.nix
Sem-6/NetworkProgramming/: flake.nix
(+122 files in other folders)
